# flexDeploy

./: .gitignore  COMMANDS.md  DATABASE_MIGRATION.md  GATING_FACTORS_REFACTOR.md  QUICKSTART.md  README.md  SIMULATOR.md  UI_COMPLETE.md  config.ini.example  deploy_bedrock.sh  flexdeploy.db  install.bat  install.sh  main.py  package-lock.json  pyproject.toml  run_app.bat  run_app.sh  setup_config.bat  setup_config.sh  test_api.sh  test_bedrock_agents.py
.github/: copilot-instructions.md
aws-orchestrator/: GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.py  requirements.txt
aws-orchestrator/examples/: basic_example.py  flexdeploy_integration.py
aws-orchestrator/src/: __init__.py
aws-orchestrator/src/common/: __init__.py  queue.py
aws-orchestrator/src/master/: orchestrator.py
aws-orchestrator/src/ui/: handlers.py
aws-orchestrator/tests/: test_dynamic_rings.py  test_orchestrator.py
server/: bedrock_agents.py  config.py  database.py  deployment_scheduler.py  flexdeploy.db  flexdeploy.db-shm  flexdeploy.db-wal  init_data.py  main.py  migrate_add_gating_prompt.py  migrate_data.py  migrate_gating_factors.py  models.py  simulator_service.py
simulator/: DYNAMIC_RING_ASSIGNMENT.md  QUICKSTART_RINGS.py  README.md  run_orchestrator.py  test_deployment_watcher.py
simulator/examples/: advanced_example.py  dynamic_ring_assignment.py
simulator/src/common/: config.py  messages.py
simulator/src/master/: __init__.py  agent_spawner.py  config_loader.py  (+4 more)
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.jsx  index.css
(+14 files in other folders)
